Debut du responsive design

--- a/contact.html
+++ b/contact.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="./css/contactstylesheet.css">
     <link rel="stylesheet" href="./css/indexstylesheet.css">
     <link rel="shortcut icon" href="./images/icons/logo 5.avif" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/54a0eeadad.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="header">
-        <div class="logo2">
+        <div class="logo">
             <a href="">
                 <img src="./images/icons/logo hopital santé  +.png">
             </a>
         </div>
 
-        <nav class="menu2">
+        <nav class="menu">
             <li>
                 <a href="index.html">
                     Accueil
@@ -51,7 +52,7 @@
         </nav>
 
 
-        <div class="button2">
+        <div class="button">
             <a href="tel: 991" class="btn2">
                 URGENCE
             </a>
@@ -59,6 +60,10 @@
             <a href="#contact" class="btn1">
                 contactez Nous
             </a>
+        </div>
+
+        <div class="menu-burger">
+            <i class="fa-solid fa-bars" style="color: #000;"></i>
         </div>
     </header>
 
@@ -186,7 +191,7 @@
             <hr>
             <div class="foot">
                 <p>
-                    Dévélopper et designer par Charles KPALIKA
+                    @Cpyright by Charles KPALIKA
                 </p>
             </div>
         </div>
