--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/indexstylesheet.css">
     <link rel="stylesheet" href="./css/contactstylesheet.css">
     <link rel="shortcut icon" href="./images/icons/logo 5.avif" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/54a0eeadad.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -61,6 +62,11 @@
                     contactez Nous
                 </a>
             </div>
+
+            <div class="menu-burger">
+                <i class="fa-solid fa-bars" style="color: #000;"></i>
+            </div>
+
         </header>
         <br>
 
@@ -266,10 +272,12 @@
                             En cas d'urgence
                         </h5>
 
-                        <div class="numero-urgence">
+                        <a href="tel: 991" class="numero-urgence">
                             <img src="./images/icons/telephone-receiver-material-svgrepo-com.png" alt="">
-                            <a href="tel: 8800">8800</a>
-                        </div>
+                            <p>
+                                991
+                            </p>
+                        </a>
 
                     </div>
                 </div>
@@ -278,7 +286,7 @@
             <hr>
             <div class="foot">
                 <p>
-                    Dévélopper et designer par Charles KPALIKA
+                    @Copyright Charles KPALIKA
                 </p>
             </div>
         </div>
