suite de responsive

--- a/contact.html
+++ b/contact.html
@@ -94,29 +94,29 @@
 
             <div class="nom-prenom">
                 <label for="name" class="form__label">Nom :</label>
-                <input type="text" placeholder="Votre Nom" name="name">
+                <input type="text" placeholder="Votre Nom" name="name" required>
                 <label for="prenom" class="form__label">Prénoms :</label>
-                <input type="text" placeholder="Votre Prénoms " name="prenom">
+                <input type="text" placeholder="Votre Prénoms " name="prenom" required>
             </div>
 
             <div class="input-phone-number">
                 <label for="number" class="form__label">Numero de téléphone : </label> <br>
-                <input type="text" placeholder="Votre numero de télephone" name="number">
+                <input type="text" placeholder="Votre numero de télephone" name="number" required>
             </div>
 
             <div class="input-mail">
                 <label for="mail" class="form__label">E-mail : </label> <br>
-                <input type="text" placeholder="Votre Email" name="mail">
+                <input type="text" placeholder="Votre Email" name="mail" required>
             </div>
 
             <div class="date-rdv">
                 <label for="rendez-vous" class="form__label">Date de rendez-vous :</label> <br>
-                <input type="date" name="rendez-vous" id="rdv">
+                <input type="date" name="rendez-vous" id="rdv" required>
             </div>
 
             <div class="input-message">
                 <label for="message" class="form__label">Message :</label> <br>
-                <input type="text" placeholder="" name="message">
+                <input type="text" placeholder="" name="message"  required>
             </div>
 
             <a href="" class="send-button">
