restoration du menu burger

--- a/index.html
+++ b/index.html
@@ -274,9 +274,7 @@
 
                         <a href="tel: 991" class="numero-urgence">
                             <img src="./images/icons/telephone-receiver-material-svgrepo-com.png" alt="">
-                            <p>
-                                991
-                            </p>
+                            <a href="tel: 8800">8800</a>
                         </a>
 
                     </div>
