correction du design du numero d'urgence dans le footer de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                             En cas d'urgence
                         </h5>
 
-                        <a href="tel: 991" class="numero-urgence">
+                        <div class="numero-urgence">
                             <img src="./images/icons/telephone-receiver-material-svgrepo-com.png" alt="">
                             <a href="tel: 8800">8800</a>
-                        </a>
+                        </div>
 
                     </div>
                 </div>
